# N2Ter

./: .gitignore  AgentWorkflow.md  DE.md  Design.md  README.md
backend/: .gitignore  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202606060001_initial_schema.py  202606060002_agent_screenplay_branches.py  202606060003_screenplay_memory_default.py  202606060004_add_export_format_docx.py
backend/app/: __init__.py  core.py  db.py  main.py  pdf_runtime.py
backend/app/agents/: __init__.py  base_agent.py  conversation_agent.py  generation_agent.py  planning_agent.py  preprocessing_agent.py
backend/app/exporters/: __init__.py  pdf_exporter.py  word_exporter.py  yaml_exporter.py
backend/app/models/: __init__.py  entities.py  enums.py
backend/app/routes/: __init__.py  conversations.py  exports.py  novels.py  prompts.py  screenplays.py  skills.py  tasks.py  websocket.py
backend/app/schemas/: __init__.py  common.py  conversations.py  exports.py  novels.py  prompts.py  screenplays.py  skills.py  tasks.py
backend/app/services/: chapter_splitter.py  character_profile_utils.py  conversation_compressor.py  conversation_service.py  embedding_service.py  (+19 more)
backend/docker/: .env.example  Dockerfile.api  Dockerfile.worker  docker-compose.override.yml  docker-compose.yml
backend/tests/: conftest.py  test_agents.py  test_api_flow.py  test_app_structure.py  test_chapter_splitter.py  test_character_profile_utils.py  test_export_filename.py  test_health.py  test_llm_services.py  test_prompt_skill_routes.py  test_tools.py
(+87 files in other folders)
