[project]
name = "n2ter-backend"
version = "0.1.0"
description = "Backend for the AI novel-to-screenplay tool."
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.13.2",
    "asyncpg>=0.29.0",
    "celery>=5.4.0",
    "fastapi>=0.111.0",
    "pydantic-settings>=2.3.4",
    "python-multipart>=0.0.9",
    "redis>=5.0.7",
    "sqlalchemy>=2.0.31",
    "uvicorn[standard]>=0.30.1",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: tests that touch local development services",
]
